add basic context provider example

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "workspaces": [
     "basic-host-remote/*",
     "bi-directional/*",
+    "context-provider/*",
     "self-healing/*",
     "server-side-rendering/*",
     "typescript/*"
