--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "basic-host-remote/*",
     "bi-directional/*",
     "context-provider/*",
+    "nested/*",
     "redux/*",
     "self-healing/*",
     "server-side-rendering/*",
