--- a/version-discrepancy/app2/package.json
+++ b/version-discrepancy/app2/package.json
@@ -18,7 +18,8 @@
     "serve": "serve dist -p 3002"
   },
   "dependencies": {
-    "react": "16.8.3",
-    "react-dom": "16.8.3"
+    "lodash": "4.11.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
