feat: adding clean script

--- a/bi-directional/package.json
+++ b/bi-directional/package.json
@@ -4,5 +4,6 @@
     "start": "lerna run --scope @bi-directional/* --parallel start",
     "build": "lerna run --scope @bi-directional/* build",
     "serve": "lerna run --scope @bi-directional/* --parallel serve"
+    "clean": "lerna run --scope @bi-directional/* --parallel clean"
   }
 }
