--- a/comprehensive-demo/package.json
+++ b/comprehensive-demo/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "yarn workspaces run build",
     "serve": "wsrun --parallel serve",
+    "clean": "wsrun --parallel clean",
     "start": "concurrently \"wsrun --parallel start\" \"wsrun --parallel serve\""
   },
   "workspaces": {
