--- a/bi-directional/app1/package.json
+++ b/bi-directional/app1/package.json
@@ -15,7 +15,9 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack --mode production",
-    "serve": "serve dist -p 3001"
+    "serve": "serve dist -p 3001",
+    "clean": "rm -rf dist"
+
   },
   "dependencies": {
     "react": "^16.13.0",
